// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with application.yml empty 1`] = `Object {}`;

exports[`with application.yml load application.yml 1`] = `
Object {
  "application": Object {
    "db": "test",
    "host": "127.0.0.1",
  },
  "testPath": "<PROJECT_ROOT>/__tests__/test.json",
}
`;

exports[`with application.yml load with bad profile 1`] = `
Object {
  "application": Object {
    "db": "test",
    "host": "127.0.0.1",
  },
  "testPath": "<PROJECT_ROOT>/__tests__/test.json",
}
`;

exports[`with application.yml load with prod profile 1`] = `
Object {
  "application": Object {
    "db": "test",
    "host": "prod.app.com",
  },
  "testPath": "<PROJECT_ROOT>/__tests__/test.json",
}
`;

exports[`with application.yml with bad handler must throw error 1`] = `[Error: ENOENT, no such file or directory '<PROJECT_ROOT>/__tests__/test.json']`;

exports[`with bad application.yml 1`] = `Object {}`;

exports[`with config folder doesn't exist 1`] = `Object {}`;
